[package]
name = "minesweeper"
version = "0.1.0"
edition = "2021"

[dependencies]
winit = { version = "0.29", features = ["rwh_05"] }
env_logger = "0.10"
log = "0.4"
wgpu = "22.0"
pollster = "0.3"
bytemuck = { version ="1.21.0", features = ["derive"] }
anyhow = "1.0"
cgmath = '0.18'
load_file = '1.0.1'
rand = '0.8.5'

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "1.0"
wgpu = { version = "22.0" }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
]}

[dependencies.image]
version = "0.24"
default-features = false
features = ["png", "jpeg"]