[package]
name = "minesweeper"
version = "0.2.0"
edition = "2021"

[dependencies]
winit = { version = "0.30", features = ["rwh_05"] }
env_logger = "0.11"
log = "0.4"
wgpu = "26.0"
pollster = "0.4"
bytemuck = { version ="1.23", features = ["derive"] }
anyhow = "1.0"
cgmath = '0.18'
rand = '0.9'
image = { version = "0.25.6", default-features = false, features = ["png"]}

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1"
console_log = "1.0"
wgpu = "26.0"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
]}